--- a/orstthesis.tex
+++ b/orstthesis.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{orstthesis}
-
 \defensedateis{Your Defense Date}
 \thesistitleis{Your Title}
 \nameis{Your Name}
@@ -47,7 +46,7 @@ All work and no play makes Johny a dull boy.
 \newpage
 \listoftables
 \newpage
-\mainmatter
+\mainmatters
 \doublespacing
 \chapter{Introduction}
 All work and no play makes Johny a dull boy.
@@ -161,15 +160,17 @@ All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
+\section{Final Thoughts}
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 \bibliographystyle{apalike}
+\phantomsection
 \bibliography{yourbibtex}
 \backmatter
-\appendix
-\chapter{Appendix}
+\appendices
+\chapter{An Appendix}
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
@@ -203,7 +204,6 @@ All work and no play makes Johny a dull boy.
 All work and no play makes Johny a dull boy.
 }
 \end{figure}
-
 \printindex
 \flyleaf
 \end{document}
